Fix alignment and colors in nav-links, links and secondary ctas.

--- a/style.css
+++ b/style.css
@@ -49,12 +49,13 @@
     --halfway-bg: #122c41;
     --blurred-features-bg: #183c5a;
 
+    --link-hover: rgb(245, 245, 245);
+
     --primary-cta-bg: hsla(var(--hue), 60%, 40%, 0.4);
     --primary-cta-bg-hover: hsla(var(--hue), 60%, 50%, 0.48);
     --primary-cta-border: hsl(var(--hue), 74%, 42%);
     --primary-cta-text: hsl(var(--hue), 90%, 85%);
-    --navbar-link-hover: var(--accent);
-    --link-hover: hsl(var(--hue), 55%, 49%);
+    --navbar-link-hover: var(--link-hover);
     --secondary-cta-hover: var(--link-hover);
 }
 
@@ -303,7 +304,7 @@ body {
     margin: 0 12px;
     font-size: 20px;
     display: inline-block;
-    padding-top: 8px;
+    padding-top: 4px;
     padding-bottom: 4px;
     /*line-height: 28px;*/
 }
@@ -428,7 +429,6 @@ body {
     color: #d1d1d1;
     font-weight: normal;
     padding: 3px 12px;
-    padding-top: 8px;
     border: 1px solid #b8b8b8;
     font-family: 'ButtonFont';
     margin: 0 10px;
@@ -740,7 +740,7 @@ h2 {
     display: inline;
     height: 26px;
     position: relative;
-    top: -2px;
+    top: 7px;
 }
 
 .feature-details-left .secondary-cta {
@@ -752,7 +752,7 @@ h2 {
     float: right;
     height: 26px;
     position: relative;
-    top: -2px;
+    top: 7px;
 }
 
 h3 a.link, h4 a.link {
